--- a/src/components/layout/Layout.module.css
+++ b/src/components/layout/Layout.module.css
@@ -1,5 +1,36 @@
 .main {
-    margin: 3rem auto;
+
+    margin: 3rem;
     width: 90%;
-    max-width: 40rem;
+    border-width: 1px;
+    border-style: solid;
+
+}
+.layout {
+    display: flex;
+    justify-content: center;
+    height: 80vh;
+    width: auto;
+}
+
+.adleft {
+    float: left;
+    left: 5%;
+    width: 20%;
+    height: inherit;
+
+}
+.adright {
+    float: right;
+    height: inherit;
+    right: 0px;
+    width: 20%;
+
+}
+
+.inner {
+    position: center;
+    width: 50%;
+    margin-inline: 3em;
+
 }
