--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 body {
     font-family: 'Open Sans', sans-serif;
     margin: 0;
-    background-color: #06a0dc;
+    background-color: #ffffff;
 }
 
 h1 {
