--- a/src/frontEnd/components/flights/FlightSearch.module.css
+++ b/src/frontEnd/components/flights/FlightSearch.module.css
@@ -30,18 +30,18 @@
 .actions button {
     font: inherit;
     cursor: pointer;
-    background-color: #77002e;
+    background-color: #0961a9;
     color: white;
     padding: 0.5rem 1.5rem;
-    border: 1px solid #77002e;
+    border: 1px solid #034072;
     border-radius: 4px;
     font-weight: bold;
 }
 
 .actions button:hover,
 .actions button:active {
-    background-color: #a50e48;
-    border-color: #a50e48;
+    background-color: #0961a9;
+    border-color: #0961a9;
 }
 
 ul li {
