--- a/client/src/frontEnd/components/account/LoginForm.module.css
+++ b/client/src/frontEnd/components/account/LoginForm.module.css
@@ -14,7 +14,7 @@ input {
     margin: 10px 0;
 }
 
-input[target="submit"] {
+.button {
     font: inherit;
     cursor: pointer;
     background-color: #0961a9;
