route for filter by query, button for add to booking

--- a/client/src/frontEnd/components/maps/MapChart.module.css
+++ b/client/src/frontEnd/components/maps/MapChart.module.css
@@ -1,3 +1,14 @@
+.button{
+    color: white;
+    padding: 0.5rem 1.5rem;
+    border-radius: 4px;
+    font-weight: bold;
+    margin-right: 1rem;
+    float: top;
+    position: static;
+    align-items: center;
+}
+
 .map {
     font-family: sans-serif;
     text-align: center;
