--- a/client/src/frontEnd/components/maps/Dropdown.module.css
+++ b/client/src/frontEnd/components/maps/Dropdown.module.css
@@ -6,14 +6,17 @@
 }
 .dropdown .dropdown-btn {
     padding: 15px 20px;
+    color: white;
+    padding: 0.5rem 1.5rem;
     background: #fff;
+    border-radius: 4px;
     box-shadow: 3px 3px 10px 6px rgba(0, 0, 0, 0.06);
     font-weight: bold;
     color: #333;
+    margin-right: 1rem;
     display: flex;
     align-items: center;
     cursor: pointer;
-    justify-content: space-between;
 }
 
 .dropdown .dropdown-content {
