--- a/client/src/frontEnd/components/ads/AdSidebar.module.css
+++ b/client/src/frontEnd/components/ads/AdSidebar.module.css
@@ -1,7 +1,10 @@
-.image {
-    width: 100%;
-    hight: 100%;
-    position: relative;
-    top: 40%;
-    transform: translateY(-50%);
+
+img{
+    vertical-align: central;
+}
+div>{
+    align-items: inherit;
+}
+h2{
+    color: black;
 }
