--- a/client/src/frontEnd/components/ads/AdSidebar.module.css
+++ b/client/src/frontEnd/components/ads/AdSidebar.module.css
@@ -1,7 +1,8 @@
 
 img{
     vertical-align: central;
-    max-width: 15%;
+    max-width: 500px;
+    width: 100%;
 }
 div>{
     align-items: inherit;
